// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable selection -- radio buttons should not have select-all checkbox 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  radio={true}
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandAll": [Function],
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getExpandHeaderProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableContainerProps": [Function],
            "getTableProps": [Function],
            "getToolbarProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": true,
            "rows": Array [],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              isSortable={false}
            >
              <TableHead>
                <TableRow>
                  <ForwardRef(TableHeader)
                    isSortHeader={false}
                    isSortable={false}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </ForwardRef(TableHeader)>
                  <ForwardRef(TableHeader)
                    isSortHeader={false}
                    isSortable={false}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </ForwardRef(TableHeader)>
                </TableRow>
              </TableHead>
              <TableBody
                aria-live="polite"
              />
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={Array []}
  size="normal"
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-container"
    >
      <div
        className="bx--data-table-header"
      >
        <h4
          className="bx--data-table-header__title"
        >
          DataTable with selection
        </h4>
        <p
          className="bx--data-table-header__description"
        />
      </div>
      <Table
        isSortable={false}
      >
        <table
          className="bx--data-table bx--data-table--no-border"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={false}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <span
                        className="bx--table-header-label"
                      >
                        Field A
                      </span>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={false}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <span
                        className="bx--table-header-label"
                      >
                        Field B
                      </span>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody
            aria-live="polite"
          >
            <tbody
              aria-live="polite"
            />
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable selection -- radio buttons should render 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  radio={true}
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandAll": [Function],
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getExpandHeaderProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableContainerProps": [Function],
            "getTableProps": [Function],
            "getToolbarProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": true,
            "rows": Array [
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "b:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:A",
                  },
                  Object {
                    "errors": null,
                    "id": "b:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 2:B",
                  },
                ],
                "disabled": false,
                "id": "b",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "a:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:A",
                  },
                  Object {
                    "errors": null,
                    "id": "a:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 1:B",
                  },
                ],
                "disabled": false,
                "id": "a",
                "isExpanded": false,
                "isSelected": false,
              },
              Object {
                "cells": Array [
                  Object {
                    "errors": null,
                    "id": "c:fieldA",
                    "info": Object {
                      "header": "fieldA",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:A",
                  },
                  Object {
                    "errors": null,
                    "id": "c:fieldB",
                    "info": Object {
                      "header": "fieldB",
                    },
                    "isEditable": false,
                    "isEditing": false,
                    "isValid": true,
                    "value": "Field 3:B",
                  },
                ],
                "disabled": false,
                "id": "c",
                "isExpanded": false,
                "isSelected": false,
              },
            ],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              isSortable={false}
            >
              <TableHead>
                <TableRow>
                  <ForwardRef(TableHeader)
                    isSortHeader={false}
                    isSortable={false}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </ForwardRef(TableHeader)>
                  <ForwardRef(TableHeader)
                    isSortHeader={false}
                    isSortable={false}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </ForwardRef(TableHeader)>
                </TableRow>
              </TableHead>
              <TableBody
                aria-live="polite"
              >
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    disabled={false}
                    id="data-table-14__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                    radio={true}
                  />
                  <TableCell>
                    Field 2:A
                  </TableCell>
                  <TableCell>
                    Field 2:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    disabled={false}
                    id="data-table-14__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                    radio={true}
                  />
                  <TableCell>
                    Field 1:A
                  </TableCell>
                  <TableCell>
                    Field 1:B
                  </TableCell>
                </TableRow>
                <TableRow>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    disabled={false}
                    id="data-table-14__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                    radio={true}
                  />
                  <TableCell>
                    Field 3:A
                  </TableCell>
                  <TableCell>
                    Field 3:B
                  </TableCell>
                </TableRow>
              </TableBody>
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={
    Array [
      Object {
        "fieldA": "Field 2:A",
        "fieldB": "Field 2:B",
        "id": "b",
      },
      Object {
        "fieldA": "Field 1:A",
        "fieldB": "Field 1:B",
        "id": "a",
      },
      Object {
        "fieldA": "Field 3:A",
        "fieldB": "Field 3:B",
        "id": "c",
      },
    ]
  }
  size="normal"
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-container"
    >
      <div
        className="bx--data-table-header"
      >
        <h4
          className="bx--data-table-header__title"
        >
          DataTable with selection
        </h4>
        <p
          className="bx--data-table-header__description"
        />
      </div>
      <Table
        isSortable={false}
      >
        <table
          className="bx--data-table bx--data-table--no-border"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={false}
                    key="fieldA"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <span
                        className="bx--table-header-label"
                      >
                        Field A
                      </span>
                    </th>
                  </TableHeader>
                  <TableHeader
                    isSortHeader={false}
                    isSortable={false}
                    key="fieldB"
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    <th
                      scope="col"
                    >
                      <span
                        className="bx--table-header-label"
                      >
                        Field B
                      </span>
                    </th>
                  </TableHeader>
                </tr>
              </TableRow>
            </thead>
          </TableHead>
          <TableBody
            aria-live="polite"
          >
            <tbody
              aria-live="polite"
            >
              <TableRow
                key="b"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    disabled={false}
                    id="data-table-14__select-row-b"
                    name="select-row-b"
                    onSelect={[Function]}
                    radio={true}
                  >
                    <td
                      className="bx--table-column-checkbox"
                    >
                      <ForwardRef(RadioButton)
                        checked={false}
                        disabled={false}
                        hideLabel={true}
                        id="data-table-14__select-row-b"
                        labelText="Select row"
                        name="select-row-b"
                        onClick={[Function]}
                      >
                        <RadioButton
                          checked={false}
                          disabled={false}
                          hideLabel={true}
                          id="data-table-14__select-row-b"
                          innerRef={null}
                          labelPosition="right"
                          labelText="Select row"
                          name="select-row-b"
                          onChange={[Function]}
                          onClick={[Function]}
                          value=""
                        >
                          <div
                            className="bx--radio-button-wrapper"
                          >
                            <input
                              checked={false}
                              className="bx--radio-button"
                              disabled={false}
                              id="data-table-14__select-row-b"
                              name="select-row-b"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="radio"
                              value=""
                            />
                            <label
                              className="bx--radio-button__label"
                              htmlFor="data-table-14__select-row-b"
                            >
                              <span
                                className="bx--radio-button__appearance"
                              />
                              <span
                                className="bx--visually-hidden"
                              >
                                Select row
                              </span>
                            </label>
                          </div>
                        </RadioButton>
                      </ForwardRef(RadioButton)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="b:fieldA"
                  >
                    <td>
                      Field 2:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="b:fieldB"
                  >
                    <td>
                      Field 2:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="a"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    disabled={false}
                    id="data-table-14__select-row-a"
                    name="select-row-a"
                    onSelect={[Function]}
                    radio={true}
                  >
                    <td
                      className="bx--table-column-checkbox"
                    >
                      <ForwardRef(RadioButton)
                        checked={false}
                        disabled={false}
                        hideLabel={true}
                        id="data-table-14__select-row-a"
                        labelText="Select row"
                        name="select-row-a"
                        onClick={[Function]}
                      >
                        <RadioButton
                          checked={false}
                          disabled={false}
                          hideLabel={true}
                          id="data-table-14__select-row-a"
                          innerRef={null}
                          labelPosition="right"
                          labelText="Select row"
                          name="select-row-a"
                          onChange={[Function]}
                          onClick={[Function]}
                          value=""
                        >
                          <div
                            className="bx--radio-button-wrapper"
                          >
                            <input
                              checked={false}
                              className="bx--radio-button"
                              disabled={false}
                              id="data-table-14__select-row-a"
                              name="select-row-a"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="radio"
                              value=""
                            />
                            <label
                              className="bx--radio-button__label"
                              htmlFor="data-table-14__select-row-a"
                            >
                              <span
                                className="bx--radio-button__appearance"
                              />
                              <span
                                className="bx--visually-hidden"
                              >
                                Select row
                              </span>
                            </label>
                          </div>
                        </RadioButton>
                      </ForwardRef(RadioButton)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="a:fieldA"
                  >
                    <td>
                      Field 1:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="a:fieldB"
                  >
                    <td>
                      Field 1:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
              <TableRow
                key="c"
              >
                <tr>
                  <TableSelectRow
                    ariaLabel="Select row"
                    checked={false}
                    disabled={false}
                    id="data-table-14__select-row-c"
                    name="select-row-c"
                    onSelect={[Function]}
                    radio={true}
                  >
                    <td
                      className="bx--table-column-checkbox"
                    >
                      <ForwardRef(RadioButton)
                        checked={false}
                        disabled={false}
                        hideLabel={true}
                        id="data-table-14__select-row-c"
                        labelText="Select row"
                        name="select-row-c"
                        onClick={[Function]}
                      >
                        <RadioButton
                          checked={false}
                          disabled={false}
                          hideLabel={true}
                          id="data-table-14__select-row-c"
                          innerRef={null}
                          labelPosition="right"
                          labelText="Select row"
                          name="select-row-c"
                          onChange={[Function]}
                          onClick={[Function]}
                          value=""
                        >
                          <div
                            className="bx--radio-button-wrapper"
                          >
                            <input
                              checked={false}
                              className="bx--radio-button"
                              disabled={false}
                              id="data-table-14__select-row-c"
                              name="select-row-c"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="radio"
                              value=""
                            />
                            <label
                              className="bx--radio-button__label"
                              htmlFor="data-table-14__select-row-c"
                            >
                              <span
                                className="bx--radio-button__appearance"
                              />
                              <span
                                className="bx--visually-hidden"
                              >
                                Select row
                              </span>
                            </label>
                          </div>
                        </RadioButton>
                      </ForwardRef(RadioButton)>
                    </td>
                  </TableSelectRow>
                  <TableCell
                    key="c:fieldA"
                  >
                    <td>
                      Field 3:A
                    </td>
                  </TableCell>
                  <TableCell
                    key="c:fieldB"
                  >
                    <td>
                      Field 3:B
                    </td>
                  </TableCell>
                </tr>
              </TableRow>
            </tbody>
          </TableBody>
        </table>
      </Table>
    </div>
  </TableContainer>
</DataTable>
`;

exports[`DataTable selection should have select-all default to un-checked if no rows are present 1`] = `
<DataTable
  filterRows={[Function]}
  headers={
    Array [
      Object {
        "header": "Field A",
        "key": "fieldA",
      },
      Object {
        "header": "Field B",
        "key": "fieldB",
      },
    ]
  }
  locale="en"
  render={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "expandAll": [Function],
            "expandRow": [Function],
            "getBatchActionProps": [Function],
            "getExpandHeaderProps": [Function],
            "getHeaderProps": [Function],
            "getRowProps": [Function],
            "getSelectionProps": [Function],
            "getTableContainerProps": [Function],
            "getTableProps": [Function],
            "getToolbarProps": [Function],
            "headers": Array [
              Object {
                "header": "Field A",
                "key": "fieldA",
              },
              Object {
                "header": "Field B",
                "key": "fieldB",
              },
            ],
            "onInputChange": [Function],
            "radio": undefined,
            "rows": Array [],
            "selectAll": [Function],
            "selectRow": [Function],
            "selectedRows": Array [],
            "sortBy": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <TableContainer
            title="DataTable with selection"
          >
            <Table
              isSortable={false}
            >
              <TableHead>
                <TableRow>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    checked={false}
                    id="data-table-7__select-all"
                    indeterminate={false}
                    name="select-all"
                    onSelect={[Function]}
                  />
                  <ForwardRef(TableHeader)
                    isSortHeader={false}
                    isSortable={false}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field A
                  </ForwardRef(TableHeader)>
                  <ForwardRef(TableHeader)
                    isSortHeader={false}
                    isSortable={false}
                    onClick={[Function]}
                    scope="col"
                    sortDirection="NONE"
                    translateWithId={[Function]}
                  >
                    Field B
                  </ForwardRef(TableHeader)>
                </TableRow>
              </TableHead>
              <TableBody
                aria-live="polite"
              />
            </Table>
          </TableContainer>,
        },
      ],
    }
  }
  rows={Array []}
  size="normal"
  sortRow={[Function]}
  translateWithId={[Function]}
>
  <TableContainer
    title="DataTable with selection"
  >
    <div
      className="bx--data-table-container"
    >
      <div
        className="bx--data-table-header"
      >
        <h4
          className="bx--data-table-header__title"
        >
          DataTable with selection
        </h4>
        <p
          className="bx--data-table-header__description"
        />
      </div>
      <Table
        isSortable={false}
      >
        <table
          className="bx--data-table bx--data-table--no-border"
        >
          <TableHead>
            <thead>
              <TableRow>
                <tr>
                  <TableSelectAll
                    ariaLabel="Select all rows"
                    check
